--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trauminselreisen Dashboard</title>
+    <title>Trauminsel reisen Dashboard</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js' %>
+
+
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <ul id="dropdown1" class="dropdown-content">
+    <li class="divider"></li>
+    <li><a href="#!">2019</a></li>
+  </ul>
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
+        <a href="/" class="brand-logo">Trauminsel Reisen</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/"><i class="material-icons left">help_outline</i>HELP</a></li>
+          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">SORT YEAR<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="waves-effect waves-light btn">CONTACT US</a></li>
+
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <main>
+    <div class="container_traum">
+      <div class="row">
+        <div class="col s12">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+  </main>
+
+<script>
+        $(".dropdown-trigger").dropdown();
+        $(document).ready(function() {
+            $('tr.header').click(function () {
+                toggleRowChildren($(this), 'header');
+            });
+
+            function toggleRowChildren(parentRowElement, parentClass) {
+                var childClass = parentRowElement.attr('id');
+                $('tr.'+childClass, parentRowElement.parent()).toggle();
+                $('tr.'+childClass).each(function(){
+                    if ($(this).hasClass(parentClass) && !$(this).hasClass('collapsed')) {
+                        toggleRowChildren($(this), parentClass);
+                    }
+                });
+                parentRowElement.toggleClass('collapsed');
+            }
+        });
+</script>
+
   </body>
 </html>
