--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -1,46 +1,100 @@
+<% @hotels.each do |hotel| %>
+<div class="table-responsive">
+  <table class="table top-table">
+    <thead class="first-level">
+      <tr>
+        <th class="row-head">
+          <div class="cel-inner">
+            <div class="top-title"><span class="collapse-arrow collapse-arrow-down"></span><%= hotel.name %></div>
+          </div>
+        </th>
+        <% months_after_current.each do |month| %>
 
-    <% @hotels.each do |hotel| %>
+        <th>
+          <div class="cel-inner">
+            <div class="top-title-col"><%= month.upcase %></div>
+            <div class="sort-wrap">
+              <span class="sort-down inactive"></span>
+              <span class="sort-up"></span>
+            </div>
+          </div>
+        </th>
+        <% end %>
+        <% months_before_current.each do |month| %>
+        <th>
+          <div class="cel-inner">
+            <div class="top-title-col"><%= month.upcase %></div>
+            <div class="sort-wrap">
+              <span class="sort-down inactive"></span>
+              <span class="sort-up"></span>
+            </div>
+          </div>
+        </th>
+        <% end %>
+      </tr>
+    </thead>
 
-      <table class="responsive-table collapsible">
-
-        <tr id="cat1" class="header main" >
-          <th><%= hotel.name %></th>
-          <% months_after_current.each do |month| %>
-            <th><%= month.upcase %></th>
-          <% end %>
-          <% months_before_current.each do |month| %>
-            <th><%= month.upcase %></th>
-          <% end %>
-        </tr>
-
-
-
-          <% hotel.hotel_sites.each do |hs| %>
-          <% mps = hs.month_prices %>
-            <tr  id="cat1a" class="header cat1">
-              <td><%= hs.site.name %></td>
-              <% months_after_current.each do |month| %>
-                <td>&#x20ac;<%= mps.where(month: month).sum(:price_concurrent) %></td>
+    <tbody class="second-level">
+      <% hotel.hotel_sites.each do |hs| %>
+      <% mps = hs.month_prices %>
+      <tr class="second-level-head">
+        <td class="row-head">
+          <div class="cel-inner">
+            <div class="second-level-title">
+              <div class="second-level-title__inner"><span
+                  class="collapse-arrow collapse-arrow-down-black"></span><%= hs.site.name %></div><a href="#"
+                target="_blank"><span class="second-link-out"></span></a>
+            </div>
+          </div>
+        </td>
+        <% months_after_current.each do |month| %>
+        <td>
+          <div class="cel-inner">€<%= mps.where(month: month).pluck(:price_concurrent).min %></div>
+        </td>
+        <% end %>
+        <% months_before_current.each do |month| %>
+        <td>
+          <div class="cel-inner">€<%= mps.where(month: month).pluck(:price_concurrent).min %></div>
+        </td>
+        <% end %>
+      </tr>
+      <tr class="second-level-content">
+        <td colspan="13">
+          <table class="table inner-table">
+            <tbody>
+              <% hs.hotel_types.each do |ht| %>
+              <% mps = ht.month_prices %>
+              <tr>
+                  <td class="row-head">
+                      <div class="cel-inner">
+                        <div class="inner-title"><%= ht.name %> <a href="#" target="_blank"><span class="second-link-in"></span></a></div>
+                      </div>
+                    </td>
+                <% months_after_current.each do |month| %>
+                <td>
+                    <div class="cel-inner">
+                      <span class="top-price price-unchanged">€<%= mps.where(month: month).sum(:price_concurrent) %></span>
+                      <span class="bottom-price"></span>
+                    </div>
+                  </td>
+                <% end %>
+                <% months_before_current.each do |month| %>
+                <td>
+                    <div class="cel-inner">
+                      <span class="top-price price-unchanged">€<%= mps.where(month: month).sum(:price_concurrent) %></span>
+                      <span class="bottom-price"></span>
+                    </div>
+                  </td>
+                  <% end %>
+              </tr>
               <% end %>
-              <% months_before_current.each do |month| %>
-                <td>&#x20ac;<%= mps.where(month: month).sum(:price_concurrent) %></td>
-              <% end %>
-            </tr>
-          <% hs.hotel_types.each do |ht| %>
-            <% mps = ht.month_prices %>
-            <tr class="cat1a">
-              <td><%= ht.name %></td>
-              <% months_after_current.each do |month| %>
-                <td>&#x20ac;<%= mps.where(month: month).sum(:price_concurrent) %></td>
-              <% end %>
-              <% months_before_current.each do |month| %>
-                <td>&#x20ac;<%= mps.where(month: month).sum(:price_concurrent) %></td>
-              <% end %>
-            </tr>
-          <% end %>
-          <% end %>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
 
-
-      </table>
-
-    <% end %>
+  </table>
+</div>
+<% end %>
