--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,68 +4,79 @@
     <title>Trauminsel reisen Dashboard</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js' %>
-
-
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" %>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-  <ul id="dropdown1" class="dropdown-content">
-    <li class="divider"></li>
-    <li><a href="#!">2019</a></li>
-  </ul>
-  <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Trauminsel Reisen</a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="/"><i class="material-icons left">help_outline</i>HELP</a></li>
-          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">SORT YEAR<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li><a class="waves-effect waves-light btn">CONTACT US</a></li>
-
-        </ul>
-      </div>
-    </nav>
-  </div>
-  <main>
-    <div class="container_traum">
-      <div class="row">
-        <div class="col s12">
+         <!-- New start-->
+         <div class="page-wrap">
+            <nav>
+              <div class="nav-wrapper container d-flex justify-content-between align-items-center">
+                <a id="logo-container" href="#" class="brand-logo"><img src="img/LogoType.png"></a>
+                <ul class="nav-list">
+                  <li class="nav-help" data-toggle="modal" data-target="#helpModal">Help</li>
+                  <li class="nav-sort">
+                    <select class="nav-sort-select">
+                      <option selected disabled>Sort by date</option>
+                      <option>2019</option>
+                      <option>2018</option>
+                      <option>2017</option>
+                    </select>
+                  </li>
+                  <li class="nav-contact"><a href="#">Contact us</a></li>
+                </ul>
+              </div>
+            </nav>
+            <!-- New end -->
+    <main>
+      <div class="container">
           <%= yield %>
         </div>
-      </div>
-    </div>
-  </main>
+        
+      </main>
 
-<script>
-        $(".dropdown-trigger").dropdown();
-        $(document).ready(function() {
-            $('tr.header').click(function () {
-                toggleRowChildren($(this), 'header');
-            });
+              <!-- Modal -->
+              <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true"></span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h5 class="modal-title text-center">Help</h5>
+                        <div class="help-box d-flex justify-content-start">
+                          <div class="help-box-img"><img src="img/icon-link-blue.svg"></div>
+                          <div class="help-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</div>
+                        </div>
+                        <div class="help-box d-flex justify-content-start">
+                          <div class="help-box-img"><img src="img/icon-link-in.svg"></div>
+                          <div class="help-box-text">Tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="help-box d-flex justify-content-start">
+                          <div class="help-box-img"><img src="img/arrows.png"></div>
+                          <div class="help-box-text">Ut enim ad minim veniam, quis nostrud </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+      <footer>
+          <div class="container">
+            <div class="footer-info">2019 Copyrights © <span>HotelPrice</span></div>
+          </div>
+          <div class="contact-icon"><a href="#"><img src="/img/phone.svg"></a></div>
+        </footer>
 
-            function toggleRowChildren(parentRowElement, parentClass) {
-                var childClass = parentRowElement.attr('id');
-                $('tr.'+childClass, parentRowElement.parent()).toggle();
-                $('tr.'+childClass).each(function(){
-                    if ($(this).hasClass(parentClass) && !$(this).hasClass('collapsed')) {
-                        toggleRowChildren($(this), parentClass);
-                    }
-                });
-                parentRowElement.toggleClass('collapsed');
-            }
-        });
-</script>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="/custom.js"></script>
   </body>
 </html>
