--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,15 @@
          <div class="page-wrap">
             <nav>
               <div class="nav-wrapper container d-flex justify-content-between align-items-center">
-                <a id="logo-container" href="#" class="brand-logo"><img src="img/LogoType.png"></a>
+                <a id="logo-container" href="#" class="brand-logo"><img src="img/Trauminselreisen-Logo-transparent.png"></a>
                 <ul class="nav-list">
                   <li class="nav-help" data-toggle="modal" data-target="#helpModal">Help</li>
                   <li class="nav-sort">
-                    <select class="nav-sort-select">
-                      <option selected disabled>Sort by date</option>
-                      <option>2019</option>
-                      <option>2018</option>
-                      <option>2017</option>
+                  
+                        <select class="nav-sort-select" onchange="window.location.href=this.options[this.selectedIndex].value">
+                            <option selected disabled>Sort by date</option>
+                            <option  VALUE="?q[hotel_types_year_eq]=2019" >2019</option>
+                    
                     </select>
                   </li>
                   <li class="nav-contact"><a href="#">Contact us</a></li>
@@ -60,7 +60,11 @@
                           <div class="help-box-text">Tempor incididunt ut labore et dolore magna aliqua. </div>
                         </div>
                         <div class="help-box d-flex justify-content-start">
-                          <div class="help-box-img"><img src="img/arrows.png"></div>
+                          <div class="help-box-img"><img src="img/icon-price-down.svg"></div>
+                          <div class="help-box-text">Ut enim ad minim veniam, quis nostrud </div>
+                        </div>
+                        <div class="help-box d-flex justify-content-start">
+                          <div class="help-box-img"><img src="img/icon-price-up.svg"></div>
                           <div class="help-box-text">Ut enim ad minim veniam, quis nostrud </div>
                         </div>
                       </div>
