--- a/public/style.css
+++ b/public/style.css
@@ -274,6 +274,17 @@ main{
 .second-link-out:hover{
 	background-image: url(img/icon-link-blue.svg);
 }
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+.inner-table tr:hover{
+	background: rgba(214,214,214,0.45);
+	background: -moz-linear-gradient(top, rgba(214,214,214,0.45) 0%, rgba(253,253,253,0) 50%, rgba(255,255,255,0) 53%, rgba(255,255,255,0) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(214,214,214,0.45)), color-stop(50%, rgba(253,253,253,0)), color-stop(53%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,0)));
+	background: -webkit-linear-gradient(top, rgba(214,214,214,0.45) 0%, rgba(253,253,253,0) 50%, rgba(255,255,255,0) 53%, rgba(255,255,255,0) 100%);
+	background: -o-linear-gradient(top, rgba(214,214,214,0.45) 0%, rgba(253,253,253,0) 50%, rgba(255,255,255,0) 53%, rgba(255,255,255,0) 100%);
+	background: -ms-linear-gradient(top, rgba(214,214,214,0.45) 0%, rgba(253,253,253,0) 50%, rgba(255,255,255,0) 53%, rgba(255,255,255,0) 100%);
+	background: linear-gradient(to bottom, rgba(214,214,214,0.45) 0%, rgba(253,253,253,0) 50%, rgba(255,255,255,0) 53%, rgba(255,255,255,0) 100%);
+}
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 .inner-table td {
     border-top: 1px solid #ebebeb;
     border-left: 1px solid #ebebeb;
@@ -344,7 +355,11 @@ nav{
 	background: #1f2736;
 	padding: 18px 0 15px 0;
 }
-
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+.brand-logo img{
+	width: 50%;
+}
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 .nav-list{
 	padding: 0;
 	margin: 0;
