image and style

--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -40,8 +40,9 @@
         <td class="row-head">
           <div class="cel-inner">
             <div class="second-level-title">
-              <div class="second-level-title__inner"><span
-                  class="collapse-arrow collapse-arrow-down-black"></span><%= hs.site.name %></div><a href="#"
+              <div class="second-level-title__inner">
+                  <span class="second-level-title__img"><%= image_tag url_for(hs.logo) if hs.logo.attached? %></span>
+                  <span class="collapse-arrow collapse-arrow-down-black"></span><%= hs.site.name %></div><a href="#"
                 target="_blank"><span class="second-link-out"></span></a>
             </div>
           </div>
