--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
          <div class="page-wrap">
             <nav>
               <div class="nav-wrapper container d-flex justify-content-between align-items-center">
-                <a id="logo-container" href="#" class="brand-logo"><img src="img/Trauminselreisen-Logo-transparent.png"></a>
+                <a id="logo-container" href="/" class="brand-logo"><img src="img/Trauminselreisen-Logo-transparent.png"></a>
                 <ul class="nav-list">
                   <li class="nav-help" data-toggle="modal" data-target="#helpModal">Help</li>
                   <li class="nav-sort">
