--- a/app/views/hotel_sites/index.html.erb
+++ b/app/views/hotel_sites/index.html.erb
@@ -1,5 +1,12 @@
 <p id="notice"><%= notice %></p>
+<%= search_form_for @q do |f| %>
 
+  <%= f.label :site_cont %>
+  <%= f.search_field :site_id_eq %>
+
+
+  <%= f.submit %>
+<% end %>
 <h1>Hotel Sites</h1>
 
 <table>
@@ -8,17 +15,16 @@
       <th>Hotel</th>
       <th>Site</th>
       <th>Link</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @hotel_sites.each do |hotel_site| %>
       <tr>
-        <td><%= hotel_site.hotel_id %></td>
-        <td><%= hotel_site.site_id %></td>
+        <td><%= hotel_site.hotel.name %></td>
+        <td><%= hotel_site.site.name %></td>
         <td><%= hotel_site.link %></td>
-        <td><%= link_to 'Show', hotel_site %></td>
         <td><%= link_to 'Edit', edit_hotel_site_path(hotel_site) %></td>
         <td><%= link_to 'Destroy', hotel_site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
