--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -20,7 +20,10 @@
     <%= form.label :active %>
     <%= form.check_box :active %>
   </div>
-
+  <div class="field">
+      <%= form.label :file %>
+      <%= form.file_field :logo %>
+    </div>
   <div class="actions">
     <%= form.submit %>
   </div>
