--- a/public/style.css
+++ b/public/style.css
@@ -220,7 +220,7 @@ main{
 	display: block;
 	width: 24px;
 	height: 24px;
-	background-image: url(img/icon-link-out-grey.svg);
+	background-image: url(img/icon-link-in.svg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin-left: 30px;
