--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -5,7 +5,7 @@
       <tr>
         <th class="row-head">
           <div class="cel-inner">
-            <div class="top-title"><span class="collapse-arrow collapse-arrow-down"></span><%= hotel.name %></div>
+            <div class="top-title"><span class="collapse-arrow collapse-arrow-down"></span><%= hotel.name %> (<%= hotel.city %>)</div>
           </div>
         </th>
         <% months_after_current.each do |month| %>
