--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -15,7 +15,10 @@
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-
+  <div class="field">
+      <%= form.label :city %>
+      <%= form.text_field :city %>
+    </div>
   <div class="field">
     <%= form.label :active %>
     <%= form.check_box :active %>
