--- a/app/views/hotel_types/show.html.erb
+++ b/app/views/hotel_types/show.html.erb
@@ -38,7 +38,7 @@
         <td class="row-head">
             <div class="cel-inner">
               <div class="inner-title"><span class="second-level-title__img"><%= image_tag url_for(hs.site.logo) if hs.site.logo.attached? %></span>
-                <span class="collapse-arrow collapse-arrow-down-black"></span><%= hs.site.name %></div>
+   <%= hs.site.name %></div>
               </div>
             </div>
           </td>
