--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -19,6 +19,10 @@
       <%= form.label :city %>
       <%= form.text_field :city %>
     </div>
+    <div class="field">
+      <%= form.label :origin_url %>
+      <%= form.text_field :origin_url %>
+    </div>
   <div class="field">
     <%= form.label :active %>
     <%= form.check_box :active %>
