--- a/app/views/hotel_types/show.html.erb
+++ b/app/views/hotel_types/show.html.erb
@@ -4,7 +4,7 @@
       <tr>
         <th class="row-head">
           <div class="cel-inner">
-            <div class="top-title"><span class="collapse-arrow collapse-arrow-down"></span><%= @hotel_type.name %></div>
+            <div class="top-title"><span class="collapse-arrow collapse-arrow-down"></span><%= @hotel_type.origin.name %></div>
           </div>
         </th>
         <% months_after_current.each do |month| %>
@@ -32,7 +32,7 @@
       </tr>
     </thead>
 
-    <tbody class="second-level">
+    <tbody class="second-level" style="display: table-row-group;">
       <tr>
         <% hs = @hotel_type.hotel_site %>
         <td class="row-head">
@@ -42,21 +42,26 @@
               </div>
             </div>
           </td>
+         
       <% months_after_current.each do |month| %>
+      <%  origin = @hotel_type.origin.month_prices.where(month: month, year: Date.current.year).take %>
+      <% mpss = @hotel_type.month_prices.where(month: month, year: Date.current.year) %>
         <td>
           <div class="cel-inner">
-            <span class="top-price price-unchanged">€<%=  @hotel_type.month_prices.where(month: month).sum(:price_concurrent) %></span>
-            <span class="bottom-price"></span>
+            <span class="top-price price-<%= mpss.take.price_option if mpss.take%>">€<%=  mpss.sum(:price) %></span>
+            <span class="bottom-price">€<%= (origin.price * 2 * 7) if origin %></span>
           </div>
         </td>
         <% end %>
         <% months_before_current.each do |month| %>
+        <%  origin = @hotel_type.origin.month_prices.where(month: month, year: Date.current.year).take %>
+        <% mpss = @hotel_type.month_prices.where(month: month, year: Date.current.year) %>
         <td>
             <div class="cel-inner">
-              <span class="top-price price-unchanged">
-                €<%= @hotel_type.month_prices.where(month: month).sum(:price_concurrent) %>
+              <span class="top-price price-<%= mpss.take.price_option if mpss.take%>">
+                €<%= mpss.sum(:price) %>
               </span>
-              <span class="bottom-price"></span>
+              <span class="bottom-price">€<%= (origin.price * 2 * 7) if origin %></span>
             </div>
           </td>
           <% end %>
