--- a/app/views/hotel_types/show.html.erb
+++ b/app/views/hotel_types/show.html.erb
@@ -33,40 +33,41 @@
     </thead>
 
     <tbody class="second-level" style="display: table-row-group;">
+   <% @hotel_type.origin.hotel_types.each do |ht| %>
       <tr>
-        <% hs = @hotel_type.hotel_site %>
+        <% hs = ht.hotel_site %>
         <td class="row-head">
             <div class="cel-inner">
               <div class="inner-title"><span class="second-level-title__img"><%= image_tag url_for(hs.site.logo) if hs.site.logo.attached? %></span>
-   <%= hs.site.name %></div>
+   <%= hs.site.name %>
               </div>
             </div>
           </td>
          
       <% months_after_current.each do |month| %>
-      <%  origin = @hotel_type.origin.month_prices.where(month: month, year: Date.current.year).take %>
-      <% mpss = @hotel_type.month_prices.where(month: month, year: Date.current.year) %>
+      <%  origin = ht.origin.month_prices.where(month: month, year: Date.current.year).take %>
+      <% mpss = ht.month_prices.where(month: month, year: Date.current.year) %>
         <td>
           <div class="cel-inner">
-            <span class="top-price price-<%= mpss.take.price_option if mpss.take%>">€<%=  mpss.sum(:price) %></span>
-            <span class="bottom-price">€<%= (origin.price * 2 * 7) if origin %></span>
+            <span class="top-price price-<%= mpss.take.price_option if mpss.take%>"><%= price_form(mpss.sum(:price)) %></span>
+            <span class="bottom-price"><%= price_form(((origin.price * 2 * 7) if origin) || 0)  %></span>
           </div>
         </td>
         <% end %>
         <% months_before_current.each do |month| %>
-        <%  origin = @hotel_type.origin.month_prices.where(month: month, year: Date.current.year).take %>
-        <% mpss = @hotel_type.month_prices.where(month: month, year: Date.current.year) %>
+        <%  origin = ht.origin.month_prices.where(month: month, year: Date.current.year).take %>
+        <% mpss = ht.month_prices.where(month: month, year: Date.current.year) %>
         <td>
             <div class="cel-inner">
               <span class="top-price price-<%= mpss.take.price_option if mpss.take%>">
-                €<%= mpss.sum(:price) %>
+                <%= price_form(mpss.sum(:price)) %>
               </span>
-              <span class="bottom-price">€<%= (origin.price * 2 * 7) if origin %></span>
+              <span class="bottom-price"><%= price_form(((origin.price * 2 * 7) if origin) || 0) %></span>
             </div>
           </td>
           <% end %>
       </tr>
     </tbody>
-    
+    <% end %>
   </table>
 </div>
